feat: webpack finilize pug rendering

--- a/src/config/mixins.pug
+++ b/src/config/mixins.pug
@@ -1,2 +1,2 @@
-include ../components/dummyComponent/dummyMixin.pug
-include ../components/anotherDummyComponent/anotherDummyMixin.pug
+include ../components/dummyComponent/dummy.mixin.pug
+include ../components/anotherDummyComponent/anotherDummy.mixin.pug
