--- a/src/siteframes/defaultSiteframe.pug
+++ b/src/siteframes/defaultSiteframe.pug
@@ -6,5 +6,15 @@ html
     meta(charset='UTF-8')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1')
+    block meta
+      title hello.
+      meta(content='prototyping ideas.', name='description')
+    meta(name='theme-color', content='#fff')
+    meta(name='robots', content='index, follow')
+    meta(name='format-detection', content='telephone=no')
+    meta(name='google', content='notranslate')
+    meta(name='google', content='nositelinkssearchbox')
+    meta(name='msapplication-tap-highlight', content='no')
+
   body
     block content
