feat: add atomic design structure inside components

--- a/src/components/molecules/dummyComponent/dummy.component.pug
+++ b/src/components/molecules/dummyComponent/dummy.component.pug
@@ -1,4 +1,4 @@
-extends ../../siteframes/defaultSiteframe
+extends ../../../siteframes/defaultSiteframe
 
 block content
   .header
@@ -11,4 +11,4 @@ block content
   })
   br
   br
-  img(src=require('../../assets/img/hello_nature.jpg') alt='sample image')
+  img(src=require('../../../assets/img/hello_nature.jpg') alt='sample image')
