feat(webpack): handle pug hmr i dev mode

--- a/src/components/index.component.pug
+++ b/src/components/index.component.pug
@@ -5,4 +5,4 @@ block content
   br
   a(href='./atoms/anotherDummyComponent/anotherDummy.html') anotherDummyComponent
   br
-  a(href='./molecules/dummyComponent/dummy.html') dummyComponent
+  a(href='./molecules/dummyComponent/dummy.html') dummyComponents
