--- a/src/components/molecules/dummyComponent/dummy.component.pug
+++ b/src/components/molecules/dummyComponent/dummy.component.pug
@@ -7,7 +7,7 @@ block content
     "text": "prototyping ideas."
   })
   +anotherDummyMixin({
-    "text": "click me"
+    "text": "click me now!"
   })
   br
   br
