feat(helpers/js): add breakpoint detection

--- a/src/components/index.component.pug
+++ b/src/components/index.component.pug
@@ -3,6 +3,7 @@ extends ../siteframes/defaultSiteframe
 block content
   h1 hello.
   br
-  a(href='./atoms/anotherDummyComponent/anotherDummy.html') anotherDummyComponent
+  a(href='./molecules/dummyComponent/dummy.html') dummy
   br
-  a(href='./molecules/dummyComponent/dummy.html') dummyComponents
+  a(href='./atoms/anotherDummyComponent/anotherDummy.html') anotherDummy
+
