--- a/src/config/main.scss
+++ b/src/config/main.scss
@@ -1,5 +1,6 @@
 @import "variables";
 @import "fonts";
+@import "../siteframes/reset";
 @import "../helpers/scssMixins/mediaQuieries.helper";
 @import "../siteframes/globalStyles";
 @import "../components/molecules/dummyComponent/dummy";
