feat: remove dummies

--- a/src/config/mixins.pug
+++ b/src/config/mixins.pug
@@ -1,2 +1,1 @@
-include ../components/molecules/dummyComponent/dummy.mixin.pug
-include ../components/atoms/anotherDummyComponent/anotherDummy.mixin.pug
+//include ../components/molecules/dummyComponent/dummy.mixin.pug
