--- a/src/components/index.component.pug
+++ b/src/components/index.component.pug
@@ -2,8 +2,5 @@ extends ../siteframes/defaultSiteframe
 
 block content
   h1 hello.
-  br
-  a(href='./molecules/dummyComponent/dummy.html') dummy
-  br
-  a(href='./atoms/anotherDummyComponent/anotherDummy.html') anotherDummy
+  p prototyping ideas.
 
