feat(atomic): start prototyping WIP

--- a/src/components/index.component.pug
+++ b/src/components/index.component.pug
@@ -3,4 +3,6 @@ extends ../siteframes/defaultSiteframe
 block content
   h1 hello.
   p prototyping ideas.
+  br
+  a(href="./atomic/molecules/textImageTeaser/textImageTeaser.html", target="_blank") atomic design
 
