--- a/src/config/main.scss
+++ b/src/config/main.scss
@@ -3,3 +3,6 @@
 @import "../siteframes/reset";
 @import "../helpers/scssMixins/mediaQuieries.helper";
 @import "../siteframes/globalStyles";
+@import "../components/atomic/atoms/richtext/richtext";
+@import "../components/atomic/atoms/icons/icon";
+@import "../components/atomic/molecules/textImageTeaser/textImageTeaser";
