--- a/src/config/mixins.pug
+++ b/src/config/mixins.pug
@@ -1,1 +1,4 @@
-//include ../components/molecules/dummyComponent/dummy.mixin.pug
+include ../components/atomic/molecules/textImageTeaser/textImageTeaser.mixin.pug
+include ../components/atomic/atoms/icons/icon.mixin.pug
+include ../components/atomic/atoms/richtext/richtext.mixin.pug
+include ../components/atomic/atoms/picture/picture.mixin.pug
