feat(atomic): prototype example components & implementation

--- a/src/components/atomic/atoms/picture/picture.mixin.pug
+++ b/src/components/atomic/atoms/picture/picture.mixin.pug
@@ -2,3 +2,6 @@ mixin picture(props)
   - var props = props || {}
 
   picture
+    source(media='(min-width: 769px)' srcset=props.lg)
+    source(media='(min-width: 576px)' srcset=props.md)
+    img(src=props.xs alt=props.altText)
