--- a/src/components/atomic/molecules/textImageTeaser/textImageTeaser.mixin.pug
+++ b/src/components/atomic/molecules/textImageTeaser/textImageTeaser.mixin.pug
@@ -7,4 +7,4 @@ mixin textImageTeaser(props)
       each cta in props.ctas
         +icon(cta)
     .textImageTeaser__image
-      +picture
+      +picture(props.picture)
