feat(gsap): add tweening example

--- a/src/components/index.component.pug
+++ b/src/components/index.component.pug
@@ -5,4 +5,6 @@ block content
   p prototyping ideas.
   br
   a(href="./atomic/molecules/textImageTeaser/textImageTeaser.html", target="_blank") atomic design
+  br
+  a(href="./gsap/gsap.html", target="_blank") gsap
 
