--- a/src/config/main.scss
+++ b/src/config/main.scss
@@ -6,3 +6,4 @@
 @import "../components/atomic/atoms/richtext/richtext";
 @import "../components/atomic/atoms/icons/icon";
 @import "../components/atomic/molecules/textImageTeaser/textImageTeaser";
+@import "../components/gsap/gsap";
