feat(fadeInWords): refactor & rename

--- a/src/components/index.component.pug
+++ b/src/components/index.component.pug
@@ -6,5 +6,7 @@ block content
   br
   a(href="./atomic/molecules/textImageTeaser/textImageTeaser.html", target="_blank") atomic design
   br
-  a(href="./gsap/gsap.html", target="_blank") gsap
+  a(href="./gsap/gsap-tweening.html", target="_blank") gsap tweening
+  br
+  a(href="./gsap/gsap-typewriter.html", target="_blank") gsap typewriter
 
