feat(scrollmagic): add createImageSequence helper

--- a/src/components/index.component.pug
+++ b/src/components/index.component.pug
@@ -8,5 +8,4 @@ block content
   br
   a(href="./gsap/gsap-tweening.html", target="_blank") gsap tweening
   br
-  a(href="./gsap/gsap-typewriter.html", target="_blank") gsap typewriter
-
+  a(href="./scrollmagic/scrollmagic-image-sequences.html", target="_blank") scrollmagic image sequence
