feat(scrollmagic): add simple svg drawing example

--- a/src/components/index.component.pug
+++ b/src/components/index.component.pug
@@ -4,8 +4,14 @@ block content
   h1 hello.
   p prototyping ideas.
   br
+  br
   a(href="./atomic/molecules/textImageTeaser/textImageTeaser.html", target="_blank") atomic design
+  br
   br
   a(href="./gsap/gsap-tweening.html", target="_blank") gsap tweening
   br
+  br
   a(href="./scrollmagic/scrollmagic-image-sequences.html", target="_blank") scrollmagic image sequence
+  br
+  br
+  a(href="./scrollmagic/scrollmagic-svg-drawing.html", target="_blank") scrollmagic svg drawing
