feat(scrollmagic): add  toggleClassOnScroll helper

--- a/src/components/index.component.pug
+++ b/src/components/index.component.pug
@@ -11,6 +11,12 @@ block content
   a(href="./gsap/gsap-tweening.html", target="_blank") gsap tweening
   br
   br
+  a(href="./scrollmagic/scrollmagic-class-toggle.html", target="_blank") scrollmagic class toggle
+  br
+  br
+  a(href="./scrollmagic/scrollmagic-gsap-tweening.html", target="_blank") scrollmagic gsap tweening
+  br
+  br
   a(href="./scrollmagic/scrollmagic-image-sequences.html", target="_blank") scrollmagic image sequence
   br
   br
