feat(scrollmagic): add tweenOnScroll helper

--- a/src/components/scrollmagic/scrollmagic-class-toggle.component.pug
+++ b/src/components/scrollmagic/scrollmagic-class-toggle.component.pug
@@ -4,6 +4,7 @@ block meta
   title hello. scrollmagic
 
 block content
+  #classToggleExample
   .teaserText
     h2.teaserText__headline in code we trust
     .teaserText__text
