--- a/src/components/scrollmagic/scrollmagic-gsap-tweening.component.pug
+++ b/src/components/scrollmagic/scrollmagic-gsap-tweening.component.pug
@@ -4,5 +4,52 @@ block meta
   title hello. scrollmagic
 
 block content
-  h1 gsap tweening :)
-  .s100
+  #tweeningExample
+  .teaserText
+    h2.teaserText__headline in code we trust
+    .teaserText__text
+      p Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+    ul.teaserText__cta-list
+      li.teaserText__cta-item
+        a(href='#') link
+      li.teaserText__cta-item
+        a(href='#') link
+      li.teaserText__cta-item
+        a(href='#') link
+  .s30
+  .teaserText
+    h2.teaserText__headline in code we trust
+    .teaserText__text
+      p Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+    ul.teaserText__cta-list
+      li.teaserText__cta-item
+        a(href='#') link
+      li.teaserText__cta-item
+        a(href='#') link
+      li.teaserText__cta-item
+        a(href='#') link
+  .s30
+  .teaserText
+    h2.teaserText__headline in code we trust
+    .teaserText__text
+      p Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+    ul.teaserText__cta-list
+      li.teaserText__cta-item
+        a(href='#') link
+      li.teaserText__cta-item
+        a(href='#') link
+      li.teaserText__cta-item
+        a(href='#') link
+  .s30
+  .teaserText
+    h2.teaserText__headline in code we trust
+    .teaserText__text
+      p Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+    ul.teaserText__cta-list
+      li.teaserText__cta-item
+        a(href='#') link
+      li.teaserText__cta-item
+        a(href='#') link
+      li.teaserText__cta-item
+        a(href='#') link
+  .s30
